# drake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  my.patch  results.csv
cmake/: options.cmake  packages.cmake
drake/examples/DDP_test/cpp/: CMakeLists.txt
drake/examples/DDP_test/cpp/include/: CMakeLists.txt  cart_pole.h  config.h  cost_function_cart_pole.h  costfunction.h  dynamicmodel.h  ilqrsolver.h  matrixUtil.h  udpsolver.h
drake/examples/DDP_test/cpp/src/: cart_pole.cpp  cost_function_cart_pole.cpp  costfunction.cpp  dynamicmodel.cpp  ilqrsolver.cpp  matrixUtil.cpp  udpsolver.cpp
drake/examples/DDP_test/cpp/test/: main.cpp  main_cartpole.cpp
drake/examples/kuka_iiwa_arm/: CMakeLists.txt  Kuka.m  KukaPlanner.m  Robotiq_Command.py  director_config.json  director_generic_planner_app.py  director_ik_app.py  director_ik_app_new.py  iiwa_lcm.cc  iiwa_simulation.cc  kuka_control.cc  kuka_control_constant_torque.cc  kuka_control_gravity_comp_test.cc  kuka_control_torque_comp_test.cc  kuka_dircol_params.h  kuka_dircol_torque_control.pmd  kuka_id_gravity_comp.cc  kuka_iiwa_signal_scope.py  kuka_ik_sine_demo.cc  kuka_inverse_dynamics_controller.h  kuka_inverse_dynamics_runner.cc  kuka_lcm_planner.h  kuka_message_handler.cc  kuka_message_handler.h  kuka_plan_runner.cc  kuka_plan_runner_dynamic_test.cc  kuka_plan_runner_friction_estimat_loading_pose_test.cc  kuka_plan_runner_friction_estimation.cc  kuka_plan_runner_inertia_J2toJ7_chirp.cc  kuka_plan_runner_inertia_J5toJ7.cc  kuka_plan_runner_inertia_J5toJ7_chirp.cc  kuka_plan_runner_inertia_estimation_J2toJ7_short_traj.cc  kuka_plan_runner_mass_and_CoM_estimation.cc  kuka_plan_runner_mass_and_CoM_estimation_J2toJ7-dummy.cc  kuka_plan_runner_mass_and_CoM_estimation_J2toJ7.cc  kuka_planning_and_control.pmd  kuka_plant.h  kuka_robotiq.pmd  kuka_sim.pmd  kuka_sim_with_dircol.pmd  (+10 more)
drake/examples/kuka_iiwa_arm/DDP_traj_gen/: CMakeLists.txt  cart_pole.cpp  cart_pole.h  config.h  cost_function_cart_pole.cpp  cost_function_cart_pole.h  cost_function_kuka_arm.cpp  cost_function_kuka_arm.h  ilqrsolver.cpp  ilqrsolver.h  kuka_arm.cpp  kuka_arm.h  udpsolver.cpp  udpsolver.h
drake/examples/kuka_iiwa_arm/DDP_traj_gen/trajectory/: joint_torque_command.csv  joint_trajectory.csv  joint_trajectory_interpolated.csv  plotFunc.m
drake/examples/kuka_iiwa_arm/experiment_data/data_analysis/: Joint_1_friction_data.eps  Joint_2_friction_data.eps  Joint_4_friction_data_no_offset.eps  Joint_6_Torque_VS_POsition.eps  Joint_6_Torque_VS_Velocity.eps  Joint_6_Velocity_VS_Position.eps  Joint_6_friction_data.eps  friction_estimation.m  read_joint_status_file.m
drake/examples/kuka_iiwa_arm/experiment_data/dynamic_test/: cur_traj_time_s.txt  joint_acceleration_measured.txt  joint_position_measured.txt  joint_torque_measured.txt  joint_velocity_measured.txt
drake/examples/kuka_iiwa_arm/experiment_data/dynamic_test/J2_chirp/: cur_traj_time_s.txt  joint_acceleration_measured.txt  joint_position_measured.txt  joint_torque_measured.txt  joint_velocity_measured.txt
drake/examples/kuka_iiwa_arm/experiment_data/dynamic_test/J2toJ4/: cur_traj_time_s.txt  joint_torque_measured.txt
drake/examples/kuka_iiwa_arm/experiment_data/dynamic_test/J2toJ4_chirp/: cur_traj_time_s.txt  joint_acceleration_measured.txt  joint_torque_measured.txt  joint_velocity_measured.txt
drake/examples/kuka_iiwa_arm/experiment_data/dynamic_test/J2toJ4_extensive_data/: cur_traj_time_s.txt
drake/examples/kuka_iiwa_arm/experiment_data/dynamic_test/J3_chirp/: cur_traj_time_s.txt  joint_acceleration_measured.txt  joint_position_measured.txt  joint_torque_measured.txt  joint_velocity_measured.txt
drake/examples/kuka_iiwa_arm/experiment_data/dynamic_test/J4_chirp/: cur_traj_time_s.txt
drake/examples/kuka_iiwa_arm/experiment_data/dynamic_test/J5J6/: cur_traj_time_s.txt
drake/examples/kuka_iiwa_arm/experiment_data/dynamic_test/J5J6_slow/: cur_traj_time_s.txt
drake/examples/kuka_iiwa_arm/experiment_data/dynamic_test/J5J6_slow2/: cur_traj_time_s.txt
drake/examples/kuka_iiwa_arm/experiment_data/dynamic_test/J5_chirp/: cur_traj_time_s.txt  joint_acceleration_measured.txt  joint_position_measured.txt  joint_torque_measured.txt  joint_velocity_measured.txt
drake/examples/kuka_iiwa_arm/experiment_data/friction_model/: cur_traj_time_s.txt  joint_torque_measured.txt  joint_velocity_measured.txt
drake/examples/kuka_iiwa_arm/experiment_data/static_test/: cur_traj_time_s.txt  joint_acceleration_measured.txt  joint_position_measured.txt
drake/examples/kuka_iiwa_arm/experiment_data/torque_command_analysis/: fn_read_file.m  read_status_file.m  torque_analysis.m
drake/examples/kuka_iiwa_arm/lumped_parameter_estimation/: KukaArmCADPlant.m  KukaArmCADPlant_J5J6J7.m  KukaArmPlant_J2toJ7_dynamic_test.m  KukaArmPlant_J2toJ7_static_test.m  KukaArmPlant_J3toJ7_static_test.m  KukaArmPlant_J5J6J7_dynamic_test.m  KukaArmPlant_J5J6J7_static_test.m  KukaArmPlant_J5toJ7_dynamic_test.m  KukaArmPlant_J5toJ7_static_test.m  KukaArmPlant_J6J7_static_test.m
drake/examples/kuka_iiwa_arm/lumped_parameter_estimation/figures/: c3z_c4z_cost_fucntion_sampling.eps  m2_m3_cost_fucntion_sampling.eps
drake/examples/kuka_iiwa_arm/lumped_parameter_estimation/test/: fn_read_file.m  getFrictionTorqueVector.m  getKukaArmCoriolisCentrifugalVector_J3toJ7.m  getKukaArmGravityVector.m  getKukaArmGravityVector_J3toJ7.m  getKukaArmInertiaMatrix_J3toJ7.m  getPotentialEnergy.m  paramEstSyntheticData_KukaArm.m  paramEstSyntheticData_KukaArm_J2toJ7_dynamic_test.m  paramEstSyntheticData_KukaArm_J2toJ7_static_test.m  paramEstSyntheticData_KukaArm_J3toJ7_static_test.m  paramEstSyntheticData_KukaArm_J5J6J7_dynamic_test.m  paramEstSyntheticData_KukaArm_J5J6J7_static_test.m  paramEstSyntheticData_KukaArm_J5toJ7_dynamic_test.m  paramEstSyntheticData_KukaArm_J5toJ7_static_test.m  paramEstSyntheticData_KukaArm_J6J7_static_test.m  read_joint_status_file.m
drake/examples/kuka_iiwa_arm/urdf/: iiwa14.urdf  iiwa14_estimated_params.urdf  iiwa14_estimated_params_fixed_gripper.urdf  iiwa14_fixed_gripper.urdf  kuka_robotiq_fixed.urdf
(+768 files in other folders)
